--- a/.github/workflows/installing-nmon.yml
+++ b/.github/workflows/installing-nmon.yml
@@ -6,5 +6,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Use Checkout and Install nmon action
+    - name: Install Nmon
       uses: felipevalimstudent/workflow-actions-server/.github/actions/composite-action@main
