--- a/.github/workflows/install-jq.yml
+++ b/.github/workflows/install-jq.yml
@@ -2,5 +2,5 @@ name: 'Workflow using Install jq workflow'
 on: [push, pull_request]
 
 jobs:
-  call-install-jq:
-    uses: felipevalimstudent/workflow-actions-server/.github/workflows/reusable-install-jq@main
+  install-jq:
+    uses: felipevalimstudent/workflow-actions-server/.github/workflows/reusable-install-jq.yml@main
