--- a/.github/workflows/install-jq.yml
+++ b/.github/workflows/install-jq.yml
@@ -1,5 +1,5 @@
 name: 'Workflow using Install jq workflow'
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   install-jq:
