--- a/.github/workflows/installing-nmon.yml
+++ b/.github/workflows/installing-nmon.yml
@@ -3,6 +3,7 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
+    environment: production 
     runs-on: ubuntu-latest
 
     steps:
